fix z-index

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,11 @@ h4 {
   align-items: center;
   padding: 34px 24px 0;
   border-bottom: 1px solid var(--text-color);
+  z-index: 50;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: var(--white-color);
   /* margin-bottom: 94px; */
 }
 
@@ -122,7 +127,7 @@ h4 {
   position: absolute;
   top: 42px;
   right: 8px;
-  z-index: 11;
+  z-index: 99;
   cursor: pointer;
 }
 
@@ -196,7 +201,7 @@ h4 {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 10;
+  z-index: 98;
 }
 .hamburger-menu:has(input:checked) + .sidebar {
   /* display: block; */
@@ -223,10 +228,10 @@ h4 {
 
 @media only screen and (min-width: 768px) {
   .header__wrapper {
-    position: fixed;
+    /* position: fixed;
     top: 0;
     width: 100%;
-    background-color: var(--white-color);
+    background-color: var(--white-color); */
   }
   .hamburger-menu {
     display: none;
@@ -454,7 +459,7 @@ h4 {
   display: flex;
   justify-content: space-between;
   position: relative;
-  z-index: 9;
+  z-index: 1;
 }
 
 .scheme__block {
@@ -518,6 +523,7 @@ h4 {
   border-radius: 40px 0;
   box-shadow: 7px 7px 30px 5px rgba(66, 96, 84, 0.15);
   padding: 41px 35px 60px 102px;
+  z-index: -1;
 }
 .clients__img {
   position: absolute;
@@ -849,6 +855,7 @@ footer {
 .media-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8px;
 }
 
